test excelDatabase, add redirection of 404 pages
